tests/suite/snapshots/suite__check__tests__check__bad_class_cycle_2.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_class_cycle_2.xi:5:1]
   │
 5 │ class E extends B {}
   · ──────────┬─────────  
   ·           ╰─────────── Class hierarchy for class E forms a cycle
───╯

